<resources>
    <string name="app_name">Marvel</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="long_text_example">"Marvel industry.

        Marvel Comics is the brand name and primary imprint of Marvel Worldwide Inc.,
        formerly Marvel Publishing, Inc. and Marvel Comics Group, a publisher of American comic
        books and related media. In 2009, The Walt Disney Company acquired Marvel Entertainment,
        Marvel Worldwide's parent company..


        Marvel was started in 1939 by Martin Goodman under a number of corporations and imprints
        but now known as Timely Comics,[2] and by 1951 had generally become known as Atlas Comics.
        The Marvel era began in 1961, the year that the company launched The Fantastic Four and
        other superhero titles created by Stan Lee, Jack Kirby, Steve Ditko and many others.
        The Marvel brand, which had been used over the years, was solidified as the company's
        primary brand.

        Marvel counts among its characters such well-known superheroes as Spider-Man, Iron Man,
        Captain America, the Hulk, Thor, Wolverine, Ant-Man, the Wasp, Black Widow, Captain Marvel,
        Black Panther, Doctor Strange, Ghost Rider, Blade, Daredevil, the Punisher and Deadpool.
        Superhero teams exist such as the Avengers, the X-Men, the Fantastic Four and the Guardians
        of the Galaxy as well as supervillains including Doctor Doom, Magneto, Thanos, Loki, Green
        Goblin, Kingpin, Red Skull, Ultron, the Mandarin, MODOK, Doctor Octopus, Kang, Dormammu,
        Venom and Galactus. Most of Marvel's fictional characters operate in a single reality known
        as the Marvel Universe, with most locations mirroring real-life places; many major
        characters are based in New York City.[3] Additionally, Marvel has published several
        licensed properties from other companies. This includes Star Wars comics twice from 1977
        to 1986 and again since 2015.


        Pulp-magazine publisher Martin Goodman created the company later known as Marvel Comics
        under the name Timely Publications in 1939.[4][5] Goodman, who had started with a Western
        pulp in 1933, was expanding into the emerging—and by then already highly popular—new
        medium of comic books. Launching his new line from his existing company's offices at 330
        West 42nd Street, New York City, he officially held the titles of editor, managing editor,
        and business manager, with Abraham Goodman (Martin's brother)[6] officially
        listed as publisher

        Timely's first publication, Marvel Comics #1 (cover dated Oct. 1939), included the first
        appearance of Carl Burgos' android superhero the Human Torch, and the first appearances
        of Bill Everett's anti-hero Namor the Sub-Mariner,[7] among other features.[4] The issue
        was a great success; it and a second printing the following month sold a combined nearly
        900,000 copies.[8] While its contents came from an outside packager, Funnies, Inc.,
        Timely had its own staff in place by the following year. The company's first true editor,
        writer-artist Joe Simon, teamed with artist Jack Kirby to create one of the first
        patriotically themed superheroes,[9] Captain America, in
        CaptainAmerica Comics #1 (March 1941). It, too, proved a hit, with sales of nearly
        one million.[8] Goodman formed Timely Comics, Inc., beginning with comics cover-dated
        April 1941 or Spring 1941. " </string>


    <string name="add_button">add button</string>
    <string name="marvel_main_photo">marvel main photo</string>
    <string name="characters_fab">characters fab</string>
    <string name="comics_fab">comics fab</string>
    <string name="events_fab">events fab</string>
    <string name="some_error">SOME ERROR</string>
    <string name="emptyText">List is empty</string>
</resources>